--- a/FoodRecipe/app/src/main/res/layout/recycler_row_item.xml
+++ b/FoodRecipe/app/src/main/res/layout/recycler_row_item.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="wrap_content"
         android:layout_height="250dp"
@@ -24,7 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="4"
-                android:src="@drawable/image"
+                android:src="@drawable/image1"
                 android:scaleType="centerCrop"/>
 
             <LinearLayout
@@ -46,7 +46,8 @@
                         android:layout_height="wrap_content"
                         android:text="Title"
                         android:textSize="18sp"
-                        android:maxLines="1"/>
+                        android:maxLines="1"
+                        android:textColor="@color/colorBlack"/>
 
                     <TextView
                         android:id="@+id/tvDescription"
@@ -54,7 +55,8 @@
                         android:layout_height="wrap_content"
                         android:text="Description"
                         android:textSize="18sp"
-                        android:maxLines="1"/>
+                        android:maxLines="1"
+                        android:textColor="@color/colorBlack"/>
 
                 </LinearLayout>
 
@@ -80,6 +82,6 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
